# TYPe-Saas

./: .env  .gitignore  LICENSE.txt  README.md  deploy.sh  pyproject.toml  run.sh
api-server/: .env  .env.template  Dockerfile  manage.py  pyproject.toml
api-server/myapp/: settings.py  urls.py
api-server/myapp/authentication/: admin.py  apps.py  auth.py  forms.py  middleware.py  models.py  serializers.py  urls.py  views.py
api-server/myapp/authentication/management/commands/: init_permission.py
api-server/myapp/authentication/migrations/: 0001_initial.py  0002_userinfo.py  0003_auto_20240407_0726.py  0004_alter_customuser_options_customuser_created_at_and_more.py
api-server/myapp/authentication/templates/: password_reset_email.html  password_reset_subject.txt  registration_email.html
api-server/myapp/core/: apps.py  email.py  filters.py  middleware.py  models.py  paginations.py  permissions.py
api-server/myapp/notification/: admin.py  apps.py  models.py  receivers.py  serializers.py  signals.py  urls.py  views.py
api-server/myapp/notification/migrations/: 0001_initial.py
api-server/myapp/ticket/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
api-server/myapp/ticket/migrations/: 0001_initial.py  0002_ticketmsg.py
api-server/templates/registration/: login.html
docker/: .env.template  compose-production.yml  dev-compose.yml
docker/docker/: api.Dockerfile  (+2 more)
frontend-server/: .env  .prettierrc  Dockerfile  next.config.mjs  package-lock.json  package.json
nginx/: nginx-local.conf  nginx-production.conf  nginx.conf
(+89 files in other folders)
