[tool.poetry]
name = "ticketcrm"
version = "0.1.0"
description = ""
authors = ["Andrea Bellomia <119261787+AndreaBellomia@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
djangorestframework = "^3.14.0"
markdown = "^3.5.2"
django-filter = "^24.1"
django-debug-toolbar = "^4.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
